--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
 	"main": "dist/index.cjs",
 	"types": "./dist/index.d.cts",
 	"scripts": {
-		"dev": "tsx ./src/index.ts --watch",
-		"build": "npx pkgroll --minify"
+		"build": "npx pkgroll --minify && npm link"
 	},
 	"exports": {
 		"require": {
